style/base/navs.scss
.nav.level2 > li > a {
    padding-left: 30px;
}

.content-with-nav {
    display: flex;
    justify-content: center;
    margin: 0 1ex;
    & > .nav-col {
        flex-shrink: 0;
        max-width: 180px;
        & > label {
            background-color: #f5f5f5;
            border-radius: 6px;
            display: none;
            font-weight: normal;
            margin-bottom: 3px;
            padding: 10px 15px;
            text-align: center;
            & > .caret {
                transition: transform 0.2s linear;
            }
        }
        & > .subnav-toggler:checked {
            & ~ label > .caret {
                transform: rotate(-180deg);
            }
            & ~ .nav {
                display: block;
                margin-bottom: 0.5em;
            }
        }
    }
    & > .content-col > :first-child {
        margin-top: 0;
    }
    &.tabs-left {
        margin-top: -22px;
        & > .content-col {
            margin: 0 15px 0 0;
            padding: 22px 0 0 22px;
        }
    }
    &.nav-left > .nav-col {
        margin-right: 22px;
    }
    &.nav-right > .nav-col {
        margin-left: 22px;
    }
}

.nav-tabs-left {
    border-right: 1px solid $nav-tabs-border-color;
    margin-right: -1px;
    padding: 22px 0;
    & > li {
        margin-bottom: 3px;
    }
    & > li > a {
        border-bottom-left-radius: 8px;
        border-top-left-radius: 8px;
        padding: 0.6em 1.5ex;
        word-wrap: break-word;
    }
    & > .active > a {
        border: 1px solid $nav-tabs-border-color;
        border-right-color: $body-bg;
        margin-right: -1px;
        &:hover {
            background-color: transparent;
        }
    }
    & > .divider {
        border-top: 1px dashed $nav-tabs-border-color;
        margin: 0.8em 0;
    }
    & > .not-a-tab > a {
        border-radius: 0;
        &:hover {
            background-color: transparent;
        }
    }
}

.nav-aside {
    border: 1px solid $nav-tabs-border-color;
    border-radius: 8px;
    padding: 8px 0;
    & > .header {
        border-bottom: 1px dotted $nav-tabs-border-color;
        margin: -8px 0 8px;
        text-align: center;
        h1 {
            font-size: $font-size-base;
            line-height: floor(($font-size-base * $line-height-base));
            margin: 0;
            overflow: hidden;
            padding: 0.5em 1ex;
            text-overflow: ellipsis;
        }
        & > .flex {
            display: flex;
            & > h1 {
                flex-grow: 1;
            }
            & > label {
                border-left: 1px dotted $nav-tabs-border-color;
                cursor: pointer;
                margin: 0;
                padding: 0.5em 1ex;
                & > .caret {
                    margin: 0;
                    transition: transform 0.2s linear;
                }
            }
        }
        & > .nav {
            border-top: 1px dotted $nav-tabs-border-color;
            display: none;
            & > li > a {
                overflow: hidden;
                text-overflow: ellipsis;
            }
        }
        & > .subnav-toggler:checked {
            & ~ .flex > label > .caret {
                transform: rotate(-180deg);
            }
            & ~ .nav {
                display: block;
            }
        }
    }
    & > li {
        & > a {
            word-wrap: break-word;
        }
        & > label {
            color: darken($link-color, 25%);
            cursor: pointer;
            display: block;
            font-weight: normal;
            padding: 10px 15px;
            margin: 0;
            & > .caret {
                transition: transform 0.2s linear;
            }
        }
        & > .togglable {
            display: none;
        }
        & > .subnav-toggler:checked {
            & ~ label > .caret {
                transform: rotate(-180deg);
            }
            & ~ .togglable {
                display: block;
                margin-bottom: 0.5em;
            }
        }
    }
    .active > a {
        border-right: 2px solid $link-hover-color;
        color: $link-hover-color;
        font-weight: bold;
    }
}

.content-col {
    flex-grow: 1;
    max-width: 100%;
}

@media (min-width: $screen-sm-min) {
    .content-col {
        min-width: 480px;
        max-width: 720px;
    }
}
@media (min-width: $screen-md-min) {
    .content-col {
        min-width: 720px;
        max-width: 940px;
    }
}
@media (min-width: $screen-lg-min) {
    .content-col {
        min-width: 940px;
        max-width: 1150px;
    }
}

@media (max-width: $screen-sm-min - 1) {
    .content-with-nav {
        display: block;  // instead of `flex`
        padding: 0 1ex;
        & > .nav-col {
            margin-bottom: 22px !important;
            max-width: 100%;
            width: auto;
            & > label {
                display: block;
                width: 100%;
                & > .caret {
                    margin-left: 5px;
                }
            }
            & > .nav {
                border: 1px solid $nav-tabs-border-color;
                border-radius: 4px;
                display: none;
                margin: 0;
                padding: 0;
                max-width: 100%;
                & > li {
                    margin-bottom: 0;
                    & > a {
                        border: none;
                        border-radius: 0;
                        margin-right: 0;
                    }
                }
                & > .header {
                    display: none;
                }
            }
        }
        &.nav-left > .nav-col {
            margin-right: 0;
        }
        &.nav-right > .nav-col {
            margin-top: 32px;
            margin-left: 0;
        }
        &.tabs-left {
            margin-top: 0;
            & > .nav-col > .nav > li.active > a {
                background-color: $nav-link-hover-bg;
                color: $link-hover-color;
            }
            & > .content-col {
                border: none;
                padding: 0;
                margin: 0;
            }
        }
    }
}

